# fluentogram-demo

./: .env.dist  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __main__.py  config_reader.py
app/db/: models.py  repo.py
app/handlers/: private.py  setup.py
app/middlewares/: lang.py  register.py  repo.py  setup.py
app/services/: fluent.py
app/utils/: callback_data.py  generators.py
resources/locales/: en.ftl  ru.ftl
