[tool.poetry]
name = "fluentogram-demo"
version = "0.1.0"
description = "Telegram bot with fluent internalization support"
authors = ["Mikhail Smolnikov <smolnik.mikhail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3.0.0b3"
fluentogram = "^1.0.28"
SQLAlchemy = "^1.4.35"
python-dotenv = "^0.20.0"
asyncpg = "^0.25.0"
greenlet = "^1.1.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
